@@ -1,5 +1,13 @@
 2010-08-04  Tristan Gingold  <gingold@adacore.com>
 
+	* vms-alpha.c (alpha_vms_add_lw_fixup): Renamed to ...
+	(alpha_vms_add_fixup_lr): ... this for consistency.
+	(alpha_vms_add_qw_fixup): Removed.
+	Fix some comments.
+	(vms_get_symbol_info): Adjust type for unknown sections.
+
+2010-08-04  Tristan Gingold  <gingold@adacore.com>
+
 	* vms-alpha.c (_bfd_vms_slurp_egsd): Use the canonical absolute
 	section for any absolute section.  Remove some debugging code.
 
